runtime/styles.css
/* runtime styles */

.cf-tinder-grid__answers {
    position: relative;
}

.cf-tinder-grid-card {
    height: 100%;
    width: 100%;
    margin-left: -50%;

    display: flex;
    position: absolute;
    left: 50%;

    padding: 10px;
    justify-content: center;
    align-items: center;

    background-size: cover;

    z-index: 10;
}

.cf-tinder-grid-answer {
    border: 3px solid #42bdd1;
    border-radius: 10px;
    background-color: #ffffff;
    overflow: hidden;
    cursor: grab;
    transition: transform .2s ease;
}

.cf-tinder-grid-answer--dragging {
    transition: none;
    cursor: grabbing;
}
.cf-tinder-grid-answer__other {
    max-width: 100%;
    width: 400px;
    border: none;
    border-bottom: 1px solid rgba(0, 0, 0, .4);
    border-radius: 0;
    background-color: transparent;
    font-size: inherit;
    text-overflow: ellipsis;
    height: 24px;
    line-height: 20px;
    padding: 0 0 3px 0;
}

.cf-tinder-grid-answer__text {
    text-align: center;
}

.cf-tinder-grid__scales {
    display: flex;
    width: 100%;
    justify-content: space-between;
}

.cf-tinder-grid-scale {
    margin: 10px;
    cursor: pointer;
}

.cf-tinder-grid-scale--selected{
    color:  #42bdd1;
}

.scale-button {
    border-radius: 5px;
    padding: 0.3em 0.5em;
    min-width: 100px;
    min-height: 2em;
    text-align: center;
}

.cf-tinder-grid__current-scale {
    position: absolute;
    bottom: 10%;
    z-index: 100;
    width: 100%;
    text-align: center;
    pointer-events: none;
    opacity: 0.8;
    transition: all 0.2s ease-in;
}

.cf-tinder-grid__current-scale i {
    color: hotpink;
    font-size: 5em;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

.rotate-right {
    transform: translate(400px) rotate(30deg) scale(0.8);
    transition: 600ms;
    cursor: e-resize;
    opacity: 0;
    z-index: 10;
}

.rotate-left {
    transform: translate(-400px) rotate(-30deg) scale(0.8);
    transition: 600ms;
    cursor: w-resize;
    opacity: 0;
    z-index: 10;
}

.cf-tinder-grid-card--finish svg {
    align-self: normal;
    width: 50%;
}

.circle{
    opacity: 0;
    stroke-dasharray: 130;
    stroke-dashoffset: 130;
    -webkit-transition: all 1s;
    -moz-transition: all 1s;
    -ms-transition: all 1s;
    -o-transition: all 1s;
    transition: all 1s;
}
.tick{
    stroke-dasharray: 50;
    stroke-dashoffset: 50;
    -webkit-transition: stroke-dashoffset 1s 0.5s ease-out;
    -moz-transition: stroke-dashoffset 1s 0.5s ease-out;
    -ms-transition: stroke-dashoffset 1s 0.5s ease-out;
    -o-transition: stroke-dashoffset 1s 0.5s ease-out;
    transition: stroke-dashoffset 1s 0.5s ease-out;
}
.draw + svg .path{
    opacity: 1;
    stroke-dashoffset: 0;
}

.hidden {
    display: none !important;
}

.grid-container {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-items: center;
    text-align: center;
    margin: 0 auto;
    max-width: 600px;
}
.cf-tinder-grid__arrow-left {
    font-size: 1.5em;
    order: 1;
    margin-right: 0.5em;
}
.cf-tinder-grid__arrow-right {
    font-size: 1.5em;
    order: 3;
    margin-left: 0.5em;
}
.cf-tinder-grid-scale {
    flex: 1 0 64px;
}
.scale-left { order: 4; }
.scale-right  { order: 5; }

.cf-tinder-grid__answers {
    flex: 1 1 calc(100% - 4.1em);
    margin: 0 auto;
    order: 2;
}

.cf-tinder-grid-card {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: 0 auto;
    background-position: center;
}

@media all and (min-width: 600px) {
    .tinder-grid--scales-sides .cf-tinder-grid__answers   { flex: 1 0; }
    .tinder-grid--scales-sides .cf-tinder-grid-scale { flex: 0 1; }
    .tinder-grid--scales-sides .scale-left { order: 1; }
    .tinder-grid--scales-sides .cf-tinder-grid__answers    { order: 2; }
    .tinder-grid--scales-sides .scale-right { order: 3; }
    .tinder-grid--scales-sides .cf-tinder-grid__arrow-right { order: 4; }
}

.tinder-grid--scales-above .cf-tinder-grid__arrow-left { order: 3; }
.tinder-grid--scales-above .scale-left { order: 1; }
.tinder-grid--scales-above .cf-tinder-grid__answers    { order: 4; }
.tinder-grid--scales-above .scale-right { order: 2; }
.tinder-grid--scales-above .cf-tinder-grid__arrow-right { order: 5; }
.tinder-grid--scales-above .cf-tinder-grid-scale {
    flex: 0 0 calc(50% - 20px);
}

